pxc/tests/test_001_px/constmet10.px
namespace constmet10;
import common -;

threaded struct foo {
  int x;
  function int n(int y) {
    int oldx = x;
    x = y;
    return oldx;
  }
  function int m(int y) const {
    threaded function int nf(int z) {
      // x = 99; // error: not modifiable
      return z;
    }
    return nf(y);
  }
}

{
  ptr{foo} v = to_ptr(foo(10));
  println(v->m(20));
}
